// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login renders correctly 1`] = `
<div>
  <h1
    data-styleName="title"
  >
    Log in to Hylo
  </h1>
  <div
    data-styleName="field"
  >
    <label
      data-styleName="field-label"
    >
      Your email address
    </label>
    <TextInput
      autoFocus={true}
      inputRef={[Function]}
      name="email"
      onChange={[Function]}
      type="text"
    />
  </div>
  <div
    data-styleName="field"
  >
    <label
      data-styleName="field-label"
    >
      Password
    </label>
    <TextInput
      name="password"
      onChange={[Function]}
      onEnter={[Function]}
      type="password"
    />
  </div>
  <Button
    data-styleName="submit"
    label="Log In"
    onClick={[Function]}
  />
  <Link
    data-styleName="forgot-password"
    replace={false}
    to="/reset-password"
  >
    <p
      data-styleName="forgot-password"
    >
      Forgot password?
    </p>
  </Link>
  <p
    data-styleName="connect-label"
  >
    Or connect with:
  </p>
  <div
    data-styleName="auth-buttons"
  >
    <a
      data-styleName="facebook"
      onClick={[Function]}
    >
      <Icon
        data-styleName="auth-icon"
        name="Facebook"
      />
      Facebook
    </a>
    <a
      data-styleName="google"
      onClick={[Function]}
    >
      <Icon
        data-styleName="auth-icon"
        name="Google"
      />
      Google
    </a>
  </div>
</div>
`;

exports[`Login renders download app modal correctly 1`] = `
<div>
  <DownloadAppModal
    header="Download the app to sign up!"
    url="some-url.com"
  />
  <h1
    data-styleName="title"
  >
    Log in to Hylo
  </h1>
  <div
    data-styleName="field"
  >
    <label
      data-styleName="field-label"
    >
      Your email address
    </label>
    <TextInput
      autoFocus={true}
      inputRef={[Function]}
      name="email"
      onChange={[Function]}
      type="text"
    />
  </div>
  <div
    data-styleName="field"
  >
    <label
      data-styleName="field-label"
    >
      Password
    </label>
    <TextInput
      name="password"
      onChange={[Function]}
      onEnter={[Function]}
      type="password"
    />
  </div>
  <Button
    data-styleName="submit"
    label="Log In"
    onClick={[Function]}
  />
  <Link
    data-styleName="forgot-password"
    replace={false}
    to="/reset-password"
  >
    <p
      data-styleName="forgot-password"
    >
      Forgot password?
    </p>
  </Link>
  <p
    data-styleName="connect-label"
  >
    Or connect with:
  </p>
  <div
    data-styleName="auth-buttons"
  >
    <a
      data-styleName="facebook"
      onClick={[Function]}
    >
      <Icon
        data-styleName="auth-icon"
        name="Facebook"
      />
      Facebook
    </a>
    <a
      data-styleName="google"
      onClick={[Function]}
    >
      <Icon
        data-styleName="auth-icon"
        name="Google"
      />
      Google
    </a>
  </div>
</div>
`;
